Enhanced the installation process for the Hyprland module by integrating package installation and configuration copying directly into the main install script. Added new dependencies to the package configuration and improved user feedback during setup. Removed the separate Hyprland install script for a more streamlined approach.

--- a/packages.conf
+++ b/packages.conf
@@ -28,6 +28,21 @@ HYPRLAND_PACKAGES=(
     "slurp"
     "wl-clipboard"
     "xdg-desktop-portal-hyprland"
+    "ghostty"
+    "dolphin"
+    "hyprshot"
+    "hyprlock"
+    "brightnessctl"
+    "qt5ct"
+    "flameshot"
+    "btop"
+    "htop"
+    "blueman"
+    "qt5-wayland"
+    "qt6-wayland"
+    "ttf-font-awesome"
+    "inter-font"
+    "ttf-nerd-fonts-symbols"
 )
 
 # Audio
