Updated package configuration for Hyprland by replacing "swaylock" and "swayidle" with "hyprlock" and "hypridle". Added "swaync" to the list of packages, enhancing the overall setup for a more tailored user experience.

--- a/packages.conf
+++ b/packages.conf
@@ -22,8 +22,8 @@ HYPRLAND_PACKAGES=(
     "hyprpaper"
     "waybar"
     "wofi"
-    "swaylock"
-    "swayidle"
+    "hyprlock"
+    "hypridle"
     "grim"
     "slurp"
     "wl-clipboard"
@@ -31,10 +31,8 @@ HYPRLAND_PACKAGES=(
     "ghostty"
     "dolphin"
     "hyprshot"
-    "hyprlock"
     "brightnessctl"
     "qt5ct"
-    "flameshot"
     "btop"
     "htop"
     "blueman"
@@ -43,6 +41,7 @@ HYPRLAND_PACKAGES=(
     "ttf-font-awesome"
     "inter-font"
     "ttf-nerd-fonts-symbols"
+    "swaync"
 )
 
 # Audio
